--- a/Website/Home.html
+++ b/Website/Home.html
@@ -2,28 +2,64 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Homepage</title>
+    <meta
+  name="viewport"
+  content="
+    width=device-width,
+    initial-scale=1,
+    minimum-scale=1,
+    maximum-scale=1
+  "
+/>
+    <title>Max Web-Home</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/unsemantic/1.2.3/unsemantic-grid-responsive-tablet.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <link rel="stylesheet" href="master.css">
   </head>
 
   <body>
-    <header>
-      <img src="https://picsum.photos/200" alt="https://picsum.photos/200">
-      <h1>Welcome to my Webpage</h1>
-    </header>
 
-    <nav>
-      <ul>
-        <li><a href="#"><img src="home.svg" alt="home.svg"></a> </li>
-        <li><a href="#">My Projects</a> </li>
-        <li><a href="#">My CV</a> </li>
-        <li><a href="#">Contact Details</a> </li>
-      </ul>
-
-
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Welcome to My Webpage</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">My CV</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Me</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
+    <main class="grid-container">
+<section class="grid-50 tablet-grid-50 mobile-grid-100" id="cont0">
+<img src="home picture.jpeg" alt="home picture.jpeg">
+</section>
+
+<section class="grid-50 tablet-grid-50 mobile-grid-100" id="cont0">
+<h2>Welcome to My Website</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+
+<section class="grid-50 tablet-grid-100 mobile-grid-100" id="cont0">
+<h2>About Me</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+    </main>
 
 
 
