made some changes to the home page. Added a social media bar at the bottom of the page. Also made general changes to make the page look better

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta charset="utf-8">
   <title>lab-activity-1</title>
   <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="master.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
-    <a class="navbar-brand" href="#">Welcome to my Website!</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand">
+        <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
+        Welcome to my Website!
+      </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -65,7 +68,7 @@
     <br>
 
     <div class="container">
-      <blockquote class="blockquote text-center bg-light">
+      <blockquote class="blockquote text-center bg-#1BE7FF">
         <p class="mb-0">Check out my Other Pages! There are links down bellow!</p>
       </blockquote>
     </div>
@@ -74,10 +77,10 @@
 
     <div class="row">
 
-      <div class="col-sm">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="apple.png">
-          <div class="card-body">
+          <div class="card-body bg-dark">
             <h5 class="card-title">My Projects</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
               commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
@@ -86,23 +89,23 @@
         </div>
       </div>
 
-      <div class="col-sm">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">My CV</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="#" class="btn btn-primary">Take Me There!</a>
           </div>
         </div>
       </div>
 
-      <div class="col-sm">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Contact Details</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="#" class="btn btn-primary">Take Me There!</a>
           </div>
         </div>
@@ -111,8 +114,31 @@
     </div>
   </main>
 
-  <footer>
+<br>
 
+  <footer>
+    <nav class="navbar navbar-expand-lg navbar-light bg-#1BE7FF">
+      <a class="navbar-brand" href="#">Follow me on Social Media</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random">
+              <br>
+          </li>
+          <li class="nav-item">
+            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random">
+              <br>
+          </li>
+          <li class="nav-item">
+            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random">
+              <br>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </footer>
 </body>
 
