--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
-
-    <a class="navbar-brand text-center">Welcome to my Website!</a>
+    <div class="container">
+      <div class="navbar-brand mb-0 h1">
+        <!-- <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
+        <ul class="navbar-nav ml-auto mr-auto">
+          <li class="nav-item"> -->
+            <a class="navbar-brand">Welcome to my Website!</a>
+      </div>
 
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,58 +42,57 @@
         </li>
       </ul>
     </div>
+  </div>
 
 
   </nav>
 
   <main>
-
     <br>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-        </div>
+    <div class="container">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="facebook-brands.jpg?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-<br>
-
-    <div class="container-fluid">
-      <h1>Welcome to my Homepage</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
       </div>
-
-<div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
-      </div>
-
-      <div class="col-sm-9">
-      <h1>About Me</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
       </div>
     </div>
   </div>
+</div>
+
+
+    <br>
+
+    <div class="container container-fluid">
+      <h1>Welcome to my Homepage</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+    <div class="container bg-dark">
+      <br>
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
+        </div>
+
+        <div class="col-sm-9">
+          <h1 class="text-white">About Me</h1>
+          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <br>
+          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <br>
+        </div>
+      </div>
+    </div>
 
     <br>
 
@@ -102,15 +104,15 @@
 
     <br>
 
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
 
         <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="apple.png">
-            <div class="card-body bg-light ml-auto">
-              <h5 class="card-title">My Projects</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          <div class="card bg-light" style="width: 18rem;">
+            <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
+            <div class="card-body bg-dark ml-auto">
+              <h5 class="card-title text-white">My Projects</h5>
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -118,11 +120,11 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card bg-light" style="width: 18rem;">
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">My CV</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            <div class="card-body bg-dark ml auto">
+              <h5 class="card-title text-white">My CV</h5>
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -130,11 +132,11 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card bg-light" style="width: 18rem;">
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Contact Details</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            <div class="card-body bg-dark ml auto">
+              <h5 class="card-title text-white">Contact Details</h5>
+              <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
@@ -150,7 +152,13 @@
 
   <footer>
     <nav class="navbar navbar-expand-lg navbar-light bg-#1BE7FF">
+      <div class="container">
+        <div class="navbar-brand mb-0 h1">
+
       <a class="navbar-brand" href="#">Follow me on Social Media</a>
+
+    </div>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -170,6 +178,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </nav>
   </footer>
 </body>
