Made changes to social media line at bottom of page. No longer goes into button when web page gets smaller.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <br>
 
-    <div class="container container-fluid">
+    <div class="container">
       <h1>Welcome to my Homepage</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -98,7 +98,7 @@
 
     <div class="container">
       <blockquote class="blockquote text-center bg-#1BE7FF">
-        <p class="mb-0">Check out my Other Pages! There are links down bellow!</p>
+        <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
       </blockquote>
     </div>
 
@@ -159,25 +159,22 @@
 
     </div>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random">
+            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
               <br>
           </li>
           <li class="nav-item">
-            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random">
+            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
               <br>
           </li>
           <li class="nav-item">
-            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random">
+            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
               <br>
           </li>
         </ul>
-      </div>
+    
     </div>
     </nav>
   </footer>
