Added bootstrap scripts, allows carousel and button to work. Also chnaged background colour to more suitable colour.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="master.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </head>
 
@@ -20,7 +23,7 @@
           <!-- <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
         <ul class="navbar-nav ml-auto mr-auto">
           <li class="nav-item"> -->
-          <a class="navbar-brand">Welcome to my Website!</a>
+          <a class="navbar-brand">Mr Max Iain Fyall</a>
         </div>
 
 
@@ -51,37 +54,29 @@
 
   <main>
 
-    <div class="container">
-
+    <div class="container-float" style="margin-bottom: 20px;">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="facebook-brands.jpg?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://picsum.photos/500/600/?random ?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
           </div>
         </div>
       </div>
     </div>
 
-
-
-    <div class="container">
-      <h1>Welcome to my Homepage</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-
     <div class="container bg-dark">
       <div class="row">
         <div class="media">
-          <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image">
+          <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
+            max-height:300px;">
           <div class="media-body">
-            <h3 class="mt-0 text-white"style="padding-top:20px;">About Me</h3>
+            <h3 class="mt-0 text-white" style="padding-top:20px;">About Me</h3>
             <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
               commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -102,45 +97,49 @@
 
     <div class="container">
       <div class="row">
-
-        <div class="col-sm-4">
+        <div class="col">
           <div class="card bg-light" style="width: 18rem;">
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml-auto">
               <h5 class="card-title text-white">My Projects</h5>
               <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum..</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col">
           <div class="card bg-light" style="width: 18rem;">
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml auto">
               <h5 class="card-title text-white">My CV</h5>
               <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col">
           <div class="card bg-light" style="width: 18rem;">
             <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
             <div class="card-body bg-dark ml auto">
               <h5 class="card-title text-white">Contact Details</h5>
               <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
               <a href="#" class="btn btn-primary">Take Me There!</a>
             </div>
           </div>
         </div>
+
+
 
       </div>
     </div>
@@ -149,11 +148,12 @@
 
 
   <footer>
+    <div class="space">
     <nav class="navbar navbar-expand-lg navbar-light bg-#1BE7FF">
       <div class="container">
         <div class="navbar-brand mb-0 h1">
 
-          <a class="navbar-brand" href="#">Follow me on Social Media</a>
+          <a class="navbar-brand">Follow me on Social Media</a>
 
         </div>
 
@@ -174,6 +174,8 @@
 
       </div>
     </nav>
+  </div>
+
   </footer>
 </body>
 
