--- a/index.html
+++ b/index.html
@@ -54,19 +54,10 @@
 
   <main>
 
-    <div class="container-float" style="margin-bottom: 20px;">
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="https://picsum.photos/g/500/600/?random?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-          </div>
-        </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
+        <p class="lead text-white text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
       </div>
     </div>
 
@@ -86,6 +77,7 @@
       </div>
     </div>
 
+    <hr class="my-4">
 
 
     <div class="container">
@@ -93,6 +85,8 @@
         <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
       </blockquote>
     </div>
+
+    <hr class="my-4">
 
 
     <div class="container">
