Changed jumbotron to know feature random greyscaled image. Removed grey scale image of myself. Also added a line to seperate the cards and the social media footer

--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
       </div>
     </div>
 
+    <hr class="my-4">
+
   </main>
 
 
   <footer>
     <div class="space">
-    <nav class="navbar navbar-expand-lg navbar-light bg-#1BE7FF">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <div class="navbar-brand mb-0 h1">
 
