Footer completed. no longer goes vertical. Behaves appropratily

--- a/index.html
+++ b/index.html
@@ -143,34 +143,29 @@
   </main>
 
 
-  <footer>
-    <div class="space">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <div class="navbar-brand mb-0 h1">
+<footer>
 
-          <a class="navbar-brand">Follow me on Social Media</a>
+<div class="space">
+    <div class="container">
+    <div class="row">
+      <div class="navbar-brand col mb-0 h3">
 
-        </div>
+        <a>Follow me on Social Media</a>
+      </div>
 
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
+      <div class="col-md-auto">
 
-          </li>
-          <li class="nav-item">
-            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
+        <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
-          </li>
-          <li class="nav-item">
-            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark">
+          <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
-          </li>
-        </ul>
+            <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
       </div>
-    </nav>
+    </div>
   </div>
+</div>
+
 
   </footer>
 </body>
