Updated code in index to look more readable. Removed style rules in master css file that are not needed. Created new files for new pages

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <div class="navbar-brand mb-0 h1">
-          <!-- <img src="home picture.jpeg" alt="https://picsum.photos/500/600/?random">
-        <ul class="navbar-nav ml-auto mr-auto">
-          <li class="nav-item"> -->
           <a class="navbar-brand">Mr Max Iain Fyall</a>
         </div>
 
@@ -54,13 +51,16 @@
 
   <main>
 
+<section>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
         <p class="lead text-white text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
       </div>
     </div>
+  </section>
 
+<section>
     <div class="container bg-dark">
       <div class="row">
         <div class="media">
@@ -76,7 +76,9 @@
         </div>
       </div>
     </div>
+</section>
 
+<section>
     <hr class="my-4">
 
 
@@ -87,8 +89,9 @@
     </div>
 
     <hr class="my-4">
+</section>
 
-
+<section>
     <div class="container">
       <div class="row">
         <div class="col">
@@ -132,40 +135,37 @@
             </div>
           </div>
         </div>
-
-
-
       </div>
     </div>
 
     <hr class="my-4">
+  </section>
 
   </main>
 
 
-<footer>
+  <footer>
 
-<div class="space">
-    <div class="container">
-    <div class="row">
-      <div class="navbar-brand col mb-0 h3">
+    <div class="space">
+      <div class="container">
+        <div class="row">
+          <div class="navbar-brand col mb-0 h3">
 
-        <a>Follow me on Social Media</a>
-      </div>
+            <a>Follow me on Social Media</a>
+          </div>
 
-      <div class="col-md-auto">
+          <div class="col-md-auto">
 
-        <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="#"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
-          <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="#"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
             <a href="#"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
 
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-
 
   </footer>
 </body>
