Updated CV page to now feature a layout for content. Also fixed issue on Projects page whereby collapsed elements would all open at once.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
-          <p class="lead text-white text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
+          <p class="lead text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
         </div>
       </div>
     </section>
@@ -67,10 +67,10 @@
             <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
             max-height:300px;">
             <div class="media-body">
-              <h3 class="mt-0 text-white" style="padding-top:20px;">About Me</h3>
-              <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              <h3 class="mt-0" style="padding-top:20px;">About Me</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="mb-0 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
                 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum.</p>
@@ -100,8 +100,8 @@
             <div class="card bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml-auto">
-                <h5 class="card-title text-white">My Projects</h5>
-                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <h5 class="card-title">My Projects</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum..</p>
@@ -114,8 +114,8 @@
             <div class="card bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
-                <h5 class="card-title text-white">My CV</h5>
-                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <h5 class="card-title">My CV</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
@@ -128,8 +128,8 @@
             <div class="card bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
-                <h5 class="card-title text-white">Contact Details</h5>
-                <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <h5 class="card-title">Contact Details</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
