Added more details to the contact info page. Also added more to CV page as well. Cv page still has problems.

--- a/Contact.html
+++ b/Contact.html
@@ -59,6 +59,29 @@
       </div>
     </section>
 
+<section>
+<div class="container bg-dark">
+  <div class="row">
+    <div class="padding">
+<h1 style="margin-bottom:25px;"><u>Main Methods to Contact Me:</u></h1>
+
+<h3>Mobile Number: 123456789</h3>
+<h3>Facebook: </h3>
+
+
+
+    </div>
+  </div>
+</div>
+
+
+
+</section>
+
+
+
+
+
   </main>
 
   <footer>
