Updated Contact page to now feature details. Also updated CV page

--- a/Contact.html
+++ b/Contact.html
@@ -59,27 +59,36 @@
       </div>
     </section>
 
-<section>
-<div class="container bg-dark">
-  <div class="row">
-    <div class="padding">
-<h1 style="margin-bottom:25px;"><u>Main Methods to Contact Me:</u></h1>
+    <section>
+      <div class="container bg-dark">
+        <div class="row">
+          <div class="padding">
+            <h1 style="margin-bottom:25px;">Contact Me Directly:</h1>
 
-<h3>Mobile Number: 123456789</h3>
-<h3>Facebook: </h3>
+            <ul class="list-group">
+              <li class="list-group-item text-dark">Phone Number: 123456789</li>
+              <li class="list-group-item text-dark">Email: max.fyall@hotmail.co.uk</li>
+              <li class="list-group-item text-dark">Gmail: exampleperson@gmail.com</li>
+            </ul>
+          </div>
+        </div>
 
+<div class="row">
+  <div class="padding">
 
+            <h1 style="margin-bottom:25px; margin-top:25px;">Other Ways to Contact Me:</h1>
 
-    </div>
-  </div>
-</div>
+            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px; margin-bottom:25px;">
 
+              <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px; margin-bottom:25px;">
 
+                <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
+                    style="max-width: 50px; max-height: 50px; margin-bottom:25px;">
+          </div>
+        </div>
+      </div>
 
-</section>
-
-
-
+    </section>
 
 
   </main>
