--- a/CV.html
+++ b/CV.html
@@ -98,7 +98,7 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                      Click to View
+                      Click to View/Collapse
                     </button>
                   </h5>
                 </div>
@@ -116,6 +116,11 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+<div class="row">
+  <div class="padding">
 
             <h2>Work Experiance</h2>
 
@@ -124,7 +129,7 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Click to View
+                      Click to View/Collapse
                     </button>
                   </h5>
                 </div>
@@ -142,6 +147,11 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+<div class="row">
+  <div class="padding">
 
             <h2>Grades</h2>
 
@@ -150,28 +160,47 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Click to View
+                      Click to View/Collapse
                     </button>
                   </h5>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <ul class="list-group">
+                      <li class="list-group-item text-dark">Maths: A</li>
+                      <li class="list-group-item text-dark">Human Biology: A</li>
+                      <li class="list-group-item text-dark">Administration and It: A</li>
+                      <li class="list-group-item text-dark">Computing Science: A</li>
+                      <li class="list-group-item text-dark">English: B</li>
+                      <li class="list-group-item text-dark">Modern Studies: B</li>
+                      <li class="list-group-item text-dark">P.E: B</li>
+                    </ul>
+                  </div>
+                </div>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
+
+          </div>
+
+    </section>
+
+    <section>
+      <hr class="my-4">
+
+      <div class="container">
+        <blockquote class="blockquote text-center">
+          <p class="mb-0 font-weight-bold">If you want to get in contact with me please visit the Contact Details page</p>
+          <a href="Contact.html" class="btn btn-primary" style="margin-top: 10px">Take Me There!</a>
+
+        </blockquote>
+        <hr class="my-4">
+
       </div>
+
 
     </section>
 
